# withered-foxy-jumpscare-desktop

./: CMakeLists.txt  LICENSE  README.md
src/: foxy.cpp  foxy.hpp  jumpscare.hpp  main.cpp  main.hpp  sprite.cpp  sprite.hpp
src/traypp/: CMakeLists.txt
src/traypp/example/simple/: main.cpp
src/traypp/tray/src/core/windows/: tray.cpp
